Normal not displayed correctly in Material Viewport #42184

Closed
opened 2014-10-11 13:24:33 +02:00 by pistol ioan · 13 comments

win 8, 64; gtx 460 se

Blender 2.72 Hash: 95182d1

Normal node not displayed correctly in Material Viewport as same in the Rendered Viewport (check image attached and blend file)Normal_Material_viewport_bug.jpg

Normal_Material_viewport_bug.blend

**win 8, 64; gtx 460 se** **Blender 2.72 Hash: 95182d1** Normal node not displayed correctly in Material Viewport as same in the Rendered Viewport (check image attached and blend file)![Normal_Material_viewport_bug.jpg](https://archive.blender.org/developer/F115895/Normal_Material_viewport_bug.jpg) [Normal_Material_viewport_bug.blend](https://archive.blender.org/developer/F115896/Normal_Material_viewport_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @istoltoto

Added subscriber: @istoltoto
Author

Same problem with all inputs from Texture Coordinate:Position, Normal; And Geometry:Generated, Normal, Object.

It's about cycles Render engine

Same problem with all inputs from Texture Coordinate:Position, Normal; And Geometry:Generated, Normal, Object. It's about cycles Render engine
Author

However if you put the "Normal" input from Texture Coordinate in the Emitter, it works well.

The only problem is with "Normal Vector " having Outputs: Normal and Dot .

However if you put the "Normal" input from Texture Coordinate in the Emitter, it works well. The only problem is with "Normal Vector " having Outputs: Normal and Dot .
Author

I hope you don't say it again: "Thanks for the report, but it's not currently considered a bug." :D

I hope you don't say it again: "Thanks for the report, but it's not currently considered a bug." :D
Added subscribers: @Sergey, @ThomasDinges, @MartijnBerger, @mont29

Sergey, Thomas, Martijn, any insight here?

Sergey, Thomas, Martijn, any insight here?
Author

Same with Mapping using Rotation with two axes like: X and Y is bad.
But i find a temporarily trick to displayed correctly: If you are using two Mapping, one with X and another with Y connected each other, then is displayed correctly.

Trick.jpg

Same with Mapping using Rotation with two axes like: X and Y is bad. But i find a temporarily trick to displayed correctly: If you are using two Mapping, one with X and another with Y connected each other, then is displayed correctly. ![Trick.jpg](https://archive.blender.org/developer/F115910/Trick.jpg)
Sergey Sharybin self-assigned this 2014-10-14 10:28:57 +02:00

That's likely an out-of-sync convention of geometry normal direction -- in Cycles it assumed to point outside, in BI it's assumed to point inside. Will need to have a closer look.

That's likely an out-of-sync convention of geometry normal direction -- in Cycles it assumed to point outside, in BI it's assumed to point inside. Will need to have a closer look.
Author

hello
Some news here?

hello Some news here?

This issue was referenced by d9ddc99a27

This issue was referenced by d9ddc99a27a4b50b54c1582d780c21f78483375d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d9ddc99a27.

Closed by commit d9ddc99a27.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42184
No description provided.